crates/keron-lang/tests/corpus/errors/parse/pattern_bare_struct_name.keron
val label: String = match "red" {
  Color => "color",
  _ => "other",
}
